k8s/apps/activescott-http/activescott-http-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activescott-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activescott-http
  template:
    metadata:
      labels:
        app: activescott-http
    spec:
      restartPolicy: Always
      containers:
      - name: sleeper
        image: alpine:3.18
        command: ["/bin/sh", "-c", "--"]
        args: ["trap : TERM INT; sleep infinity & wait"]
        ports:
        - name: http
          containerPort: 80
        resources:
          limits:
            cpu: "0.2"
            memory: "128Mi"
          requests:
            cpu: "0.1"
            memory: "2Mi"
