k8s/apps/activescott-http/dummy-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dummy
  labels:
    app: dummy

  annotations:
    k8tz.io/inject: "false"
    
spec:
  restartPolicy: Never
  containers:
  - name: dummy
    
    image: alpine:3.18
    # Just spin & wait forever: https://stackoverflow.com/a/35770783/51061
    command: ["/bin/sh", "-c", "--"]
    args: ["trap : TERM INT; sleep infinity & wait"]

    ports:
      - name: dummy
        containerPort: 80
      
    resources:
      limits:
        cpu: "0.2"
        memory: "128Mi"
      requests:
        cpu: "0.1"
        memory: "2Mi"
