k8s/apps/activescott-http/activescott-http-service.yaml
# Traefik will be using middleware to redirect requests in the Ingress. However, it apparently doesn't respond if it cannot find the service referenced in the Ingress.
# Services don't have to have a selector per https://kubernetes.io/docs/concepts/services-networking/service/#services-without-selectors
apiVersion: v1
kind: Service
metadata:
  name: activescott-http-service
spec:
  type: ClusterIP
  selector:
    app: activescott-http
  ports:
    - protocol: TCP
      port: 80
      targetPort: 999
